classDiagram
    class Snake{
        +position: Tuple[int, int]
        +direction: Tuple[int, int]
        +body: List[Tuple[int, int]]
        +move() : None
        +grow() : None
        +collides_with(position: Tuple[int, int]) : bool
    }

    class Food{
        +position: Tuple[int, int]
        +generate_position(grid_size: Tuple[int, int]) : Tuple[int, int]
    }

    class Game{
        +grid_size: Tuple[int, int]
        +score: int
        +snake: Snake
        +food: Food
        +game_over: bool
        +update() : None
        +handle_input(key: int) : None
        +display() : None
    }

    class CLI{
        +game: Game
        +run() : None
    }

    Snake "1" -- "1" Game: has
    Food "1" -- "1" Game: has
    Game "1" -- "1" CLI: has
